--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="anishapo личное энтониуильям translate healingfood смузи детокс medicalmedium russia тенерифе tenerife зожбалдеж яштокролик">
-    <meta name="keywords" content="anishapo личное энтониуильям translate healingfood смузи детокс medicalmedium russia тенерифе tenerife зожбалдеж яштокролик" />
+    <meta name="description" content="anishapo личное энтониуильям translate смузи детокс тенерифе tenerife зожбалдеж яштокролик отпуск2020 с новымгодом">
+    <meta name="keywords" content="anishapo личное энтониуильям translate смузи детокс тенерифе tenerife зожбалдеж яштокролик отпуск2020 с новымгодом" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,12 +39,14 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="anishapo личное энтониуильям translate healingfood смузи детокс medicalmedium russia тенерифе tenerife зожбалдеж яштокролик" />
+    <meta property="og:description" content="anishapo личное энтониуильям translate смузи детокс тенерифе tenerife зожбалдеж яштокролик отпуск2020 с новымгодом" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
     <!--modernizr-->
 	<script src="js/vendors/modernizr-custom.js"></script>
+
+
 
 </head>
 <body>
@@ -90,14 +92,6 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="энтониуильям">
-									<a href="./tags/./entoniuil-yam.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/entoniuil-yam.png);"></div>
-										<div class="stories__slide-txt" style="">энтониуильям</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
 								<div class="stories__slide" title="anishapo смузи детокс">
 									<a href="./tags/./anishapo-smuzi-detoks.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-smuzi-detoks.png);"></div>
@@ -106,10 +100,10 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo healingfood">
-									<a href="./tags/./anishapo-healingfood.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-healingfood.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo healingfood</div>
+								<div class="stories__slide" title="энтониуильям">
+									<a href="./tags/./entoniuil-yam.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/entoniuil-yam.png);"></div>
+										<div class="stories__slide-txt" style="">энтониуильям</div>
 									</a>
 								</div>
 							</div>
@@ -118,14 +112,6 @@
 									<a href="./tags/./anishapo-translate.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-translate.png);"></div>
 										<div class="stories__slide-txt" style="">anishapo translate</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="medicalmedium russia">
-									<a href="./tags/./medicalmedium-russia.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/medicalmedium-russia.png);"></div>
-										<div class="stories__slide-txt" style="">medicalmedium russia</div>
 									</a>
 								</div>
 							</div>
@@ -146,18 +132,18 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="едаменяющая жизнь">
-									<a href="./tags/./edamenyayushchaya-zhizn-.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/edamenyayushchaya-zhizn-.png);"></div>
-										<div class="stories__slide-txt" style="">едаменяющая жизнь</div>
+								<div class="stories__slide" title="anishapo healingfood">
+									<a href="./tags/./anishapo-healingfood.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-healingfood.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo healingfood</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo aroma">
-									<a href="./tags/./anishapo-aroma.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-aroma.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo aroma</div>
+								<div class="stories__slide" title="едаменяющая жизнь">
+									<a href="./tags/./edamenyayushchaya-zhizn-.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/edamenyayushchaya-zhizn-.png);"></div>
+										<div class="stories__slide-txt" style="">едаменяющая жизнь</div>
 									</a>
 								</div>
 							</div>
@@ -210,6 +196,14 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
+								<div class="stories__slide" title="anishapo aroma">
+									<a href="./tags/./anishapo-aroma.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-aroma.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo aroma</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
 								<div class="stories__slide" title="соксельдерея">
 									<a href="./tags/./soksel-dereya.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/soksel-dereya.png);"></div>
@@ -258,6 +252,14 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
+								<div class="stories__slide" title="medicalmedium russia">
+									<a href="./tags/./medicalmedium-russia.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/medicalmedium-russia.png);"></div>
+										<div class="stories__slide-txt" style="">medicalmedium russia</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
 								<div class="stories__slide" title="соксельдерея каждый день">
 									<a href="./tags/./soksel-dereya-kazhdyy-den-.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/soksel-dereya-kazhdyy-den-.png);"></div>
@@ -298,80 +300,80 @@
 						<div class="container">
 							<h2 class="links-page-title">ПОПУЛЯРНЫЕ</h2>
 							<div class="article-more__list">
-								<a href="./moya-istoriyaxxxxx.html" class="article-more__item">
+								<a href="./posts/./moya-istoriyaxxxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1478</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1500</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82958299_179337959950513_1325142528092314413_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=kSKPtj3zD3YAX__0AsQ&oh=02a97f7329d7afe9a554c9794f66730f&oe=5ED0422C" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
 								</a>
-								<a href="./moya-istoriya-xxxx-2.html" class="article-more__item">
+								<a href="./posts/./moya-istoriya-xxxx-3.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1232</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1264</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82155166_602925233615455_5357142775244098314_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=dpAazgOKyCsAX9CPlR4&oh=d02dc1c2216f679770e83b9cd944930b&oe=5ED47EF9" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
 								</a>
-								<a href="./moya-istoriyaxxxx.html" class="article-more__item">
+								<a href="./posts/./moya-istoriya-xxxx-2.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1083</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1116</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83117044_517051265614152_7828751543441544839_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=Q5wQPbdsBIQAX-oY1Kj&oh=0467792d6e445b429df2c3699de0fd4a&oe=5ECFC8BA" alt="МОЯ ИСТОРИЯ ❤️🌱">
+									</div>
+									<div class="article-more__item-name" style="
+">МОЯ ИСТОРИЯ ❤️🌱</div>
+								</a>
+								<a href="./posts/./moya-istoriyaxxxx.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1107</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82222585_471751380157287_2907672014600850675_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=H3TZpwrufwcAX-iQTv3&oh=d202c05e8e5aca82d4c330cc7556c183&oe=5ECA5540" alt="МОЯ ИСТОРИЯ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ❤️🌱</div>
 								</a>
-								<a href="./samyy-tselebnyy-produkt.html" class="article-more__item">
+								<a href="./posts/./samyy-tselebnyy-produkt.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1050</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1056</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80765240_402420937216712_951252990496981068_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=4iHbWlK6d-cAX_8HOMH&oh=48daa880784ecc654c787a8b5c5b16a0&oe=5EC1E22A" alt="САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ">
 									</div>
 									<div class="article-more__item-name" style="
 ">САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ</div>
 								</a>
-								<a href="./moya-istoriya-xxxx-1.html" class="article-more__item">
+								<a href="./posts/./moya-istoriya-xxxx-1.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1047</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83117044_517051265614152_7828751543441544839_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=d-oYodYCCXcAX__2L6q&oh=85e7dd59842e7ff873423c743d2bf4b7&oe=5ECFC8BA" alt="МОЯ ИСТОРИЯ ❤️🌱">
-									</div>
-									<div class="article-more__item-name" style="
-">МОЯ ИСТОРИЯ ❤️🌱</div>
-								</a>
-								<a href="./moya-istoriya-xxxx.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>796</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>952</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83443243_587623825122556_3780724092969003713_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=5iXBWM_ruTYAX9Gg-aQ&oh=2970da67dc92651a1dc5365fd8c6d32d&oe=5ECEDF2B" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
 								</a>
-								<a href="./rostki-lyutserny-xxxxxx.html" class="article-more__item">
+								<a href="./posts/./rostki-lyutserny-xxxxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>727</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>731</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=aWO90Mo72kEAX9-k873&oh=ab93b40a232592b29be83024b7b84fee&oe=5EBA8F56" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
 									</div>
 									<div class="article-more__item-name" style="
 ">РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻</div>
 								</a>
-								<a href="./o-fenkhele-xxxx.html" class="article-more__item">
+								<a href="./posts/./o-fenkhele-xxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>686</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>690</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83654188_2654364714649659_800838728339838733_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=-Hh0GpscsIUAX9R5HTr&oh=453c9be2bdfe6ce585f2ead4dc1ed459&oe=5EBFA785" alt="О ФЕНХЕЛЕ 🌱👍">
 									</div>
