--- a/stories.html
+++ b/stories.html
@@ -108,7 +108,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriya-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83443243_587623825122556_3780724092969003713_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=5iXBWM_ruTYAX9Gg-aQ&oh=2970da67dc92651a1dc5365fd8c6d32d&oe=5ECEDF2B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81986841_115689239826478_4970631180464119761_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=Erze04wZDLYAX9nZRTt&oh=e52588b9af0ac14dfeeaede7fb731c89&oe=5ED9D8B3" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -118,7 +118,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriya-xxxx-1" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83117044_517051265614152_7828751543441544839_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=d-oYodYCCXcAX__2L6q&oh=85e7dd59842e7ff873423c743d2bf4b7&oe=5ECFC8BA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83443243_587623825122556_3780724092969003713_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=5iXBWM_ruTYAX9Gg-aQ&oh=2970da67dc92651a1dc5365fd8c6d32d&oe=5ECEDF2B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -127,6 +127,16 @@
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriya-xxxx-2" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83117044_517051265614152_7828751543441544839_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=Q5wQPbdsBIQAX-oY1Kj&oh=0467792d6e445b429df2c3699de0fd4a&oe=5ECFC8BA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="moya-istoriya-xxxx-3" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82155166_602925233615455_5357142775244098314_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=dpAazgOKyCsAX9CPlR4&oh=d02dc1c2216f679770e83b9cd944930b&oe=5ED47EF9" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="vodaxchay-s-tim-yanom" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80778561_1324490884377842_6540309576461882657_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=nytvPJzqoDUAX8X1EUb&oh=5c4bffb4db00f6b53f668f7f2e51e31d&oe=5ECC561E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ВОДА/ЧАЙ С ТИМЬЯНОМ.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80778561_1324490884377842_6540309576461882657_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=4EZ3a9QWCRYAX-8HrhD&oh=b0267effabd335481f3b0785ffeb1794&oe=5ECC561E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ВОДА/ЧАЙ С ТИМЬЯНОМ.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,16 +279,6 @@
 							<input id="volny-na-plyazhexxx" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=lA9ysfTa7YsAX-Kpy1v&oh=e8db32ef9f0eb4d1853479c39d21af73&oe=5E323052" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="fokus-v-moem-pitanii" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80331999_187628665750969_2836041907825409027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=cAhRe5ZVJgwAX9UltSv&oh=d558a6a72cf4e6d48546e046c67d73dc&oe=5EB6A381" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ФОКУС В МОЕМ ПИТАНИИ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
