--- a/error.html
+++ b/error.html
@@ -83,10 +83,10 @@
 				<div class="container">
 					<h2 class="article-more__title">ПОПУЛЯРНЫЕ</h2>
 					<div class="article-more__list">
-							<a href="./posts/./moya-istoriyaxxxxx.html" class="article-more__item">
+							<a href="./posts/./moya-istoriyaxxxxx-1.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1528</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1535</span>
 								</div>
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82958299_179337959950513_1325142528092314413_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=5p3zQo4otbwAX-xcIfB&oh=4620059a476fa55a7f9834ef659f4a6f&oe=5ED0422C" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
@@ -95,7 +95,7 @@
 							<a href="./posts/./moya-istoriya-xxxx-3.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1301</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1314</span>
 								</div>
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82155166_602925233615455_5357142775244098314_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=dpAazgOKyCsAX9CPlR4&oh=d02dc1c2216f679770e83b9cd944930b&oe=5ED47EF9" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
@@ -104,7 +104,7 @@
 							<a href="./posts/./moya-istoriya-xxxx-2.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1181</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1196</span>
 								</div>
 								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83117044_517051265614152_7828751543441544839_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=Q5wQPbdsBIQAX-oY1Kj&oh=0467792d6e445b429df2c3699de0fd4a&oe=5ECFC8BA" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
@@ -113,16 +113,25 @@
 							<a href="./posts/./moya-istoriyaxxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1140</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1151</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82222585_471751380157287_2907672014600850675_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=H3TZpwrufwcAX-iQTv3&oh=d202c05e8e5aca82d4c330cc7556c183&oe=5ECA5540" alt="МОЯ ИСТОРИЯ❤️🌱">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82222585_471751380157287_2907672014600850675_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=kX7ZCHwinAYAX8Ydm9p&oh=e4f0d02e551e5d75f86c1bea8454a0f7&oe=5ECA5540" alt="МОЯ ИСТОРИЯ❤️🌱">
 							</div>
 							<div class="article-more__item-name">МОЯ ИСТОРИЯ❤️🌱</div>
+						</a>
+							<a href="./posts/./moya-istoriya-xxxx.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1063</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81986841_115689239826478_4970631180464119761_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=ldmtKUVQZXUAX9MmgNu&oh=affdfe5051490c701ca8cdd601df8dcf&oe=5ED9D8B3" alt="МОЯ ИСТОРИЯ ❤️🌱">
+							</div>
+							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
 						</a>
 							<a href="./posts/./samyy-tselebnyy-produkt.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1059</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1060</span>
 								</div>
 								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80765240_402420937216712_951252990496981068_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=4iHbWlK6d-cAX_8HOMH&oh=48daa880784ecc654c787a8b5c5b16a0&oe=5EC1E22A" alt="САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ">
 							</div>
@@ -131,29 +140,20 @@
 							<a href="./posts/./moya-istoriya-xxxx-1.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1032</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1055</span>
 								</div>
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83443243_587623825122556_3780724092969003713_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=pSl5mmGa3mIAX9QvifW&oh=96ec942f016f245ada5bc9c24f806a93&oe=5ECEDF2B" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
 							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
 						</a>
-							<a href="./posts/./moya-istoriya-xxxx.html" class="article-more__item">
+							<a href="./posts/./moya-istoriyaxxxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>959</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>804</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81986841_115689239826478_4970631180464119761_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=Erze04wZDLYAX9nZRTt&oh=e52588b9af0ac14dfeeaede7fb731c89&oe=5ED9D8B3" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82772338_185771505834668_6111832485215198874_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=CWVa2PJzsEwAX8xtSZo&oh=02b3445b166b527523d50d3edd84af5a&oe=5EC6D8AF" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
-							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
-						</a>
-							<a href="./posts/./rostki-lyutserny-xxxxxx.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>732</span>
-								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=aWO90Mo72kEAX9-k873&oh=ab93b40a232592b29be83024b7b84fee&oe=5EBA8F56" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
-							</div>
-							<div class="article-more__item-name">РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻</div>
+							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
 						</a>
 						</div>
 				</div>
