--- a/stories.html
+++ b/stories.html
@@ -106,9 +106,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="moya-istoriyaxxxxx" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82772338_185771505834668_6111832485215198874_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=CWVa2PJzsEwAX8xtSZo&oh=02b3445b166b527523d50d3edd84af5a&oe=5EC6D8AF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriya-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81986841_115689239826478_4970631180464119761_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=Erze04wZDLYAX9nZRTt&oh=e52588b9af0ac14dfeeaede7fb731c89&oe=5ED9D8B3" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81986841_115689239826478_4970631180464119761_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=ldmtKUVQZXUAX9MmgNu&oh=affdfe5051490c701ca8cdd601df8dcf&oe=5ED9D8B3" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriyaxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82222585_471751380157287_2907672014600850675_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=H3TZpwrufwcAX-iQTv3&oh=d202c05e8e5aca82d4c330cc7556c183&oe=5ECA5540" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82222585_471751380157287_2907672014600850675_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=kX7ZCHwinAYAX8Ydm9p&oh=e4f0d02e551e5d75f86c1bea8454a0f7&oe=5ECA5540" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -156,7 +166,7 @@
 					</div>
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
-							<input id="moya-istoriyaxxxxx" type="checkbox" />
+							<input id="moya-istoriyaxxxxx-1" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82958299_179337959950513_1325142528092314413_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=5p3zQo4otbwAX-xcIfB&oh=4620059a476fa55a7f9834ef659f4a6f&oe=5ED0422C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
@@ -178,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="novaya-kniga-xmedicalmedium" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82628613_595587020992835_8318551731651324857_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=5rFyISvnGAUAX9Jfb0V&oh=028c036fad665c2ad779322a6a170783&oe=5EDA5B59" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="НОВАЯ КНИГА @medicalmedium">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82628613_595587020992835_8318551731651324857_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=k72U4tipj6UAX9CfWNv&oh=bd83409a840de5066b75e4cd58f73e65&oe=5EDA5B59" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="НОВАЯ КНИГА @medicalmedium">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="efirnoe-maslo-tim-yana" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79816523_170183511051586_1081607527197908390_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=oQdYdeunpB8AX__3vFU&oh=b56ecc997645525bbf9fa2070cc6a542&oe=5ECD1285" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭФИРНОЕ МАСЛО ТИМЬЯНА">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79816523_170183511051586_1081607527197908390_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=fRS5EDmKrZoAX_JyYEZ&oh=613f19c31ba8009acbce54a9a2af84b7&oe=5ECD1285" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭФИРНОЕ МАСЛО ТИМЬЯНА">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,16 +279,6 @@
 							<input id="dorogie-druz-yax-ya-khochu-ot-vsey-dushi-pozdravit-" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77156725_3177098188972418_8139286021232875500_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=FpBwbpkNZdEAX8cIPdG&oh=4de7be75ddb992a4aa9f351ab79a0bb4&oe=5ED1B832" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Дорогие друзья, я хочу от всей души поздравить">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="volny-na-plyazhexxx" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=lA9ysfTa7YsAX-Kpy1v&oh=240c0f21712f0a2f9c1da9a384e08777&oe=5E32D912" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
