--- a/stories.html
+++ b/stories.html
@@ -106,6 +106,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="moya-istoriya-xxxx" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81869016_824576834678200_5282877511966683207_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=e5oPTI_9mm8AX85xpod&oh=b8e0c5cc2bd50addd497b1340103d548&oe=5EC17073" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriyaxxxxx" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82772338_185771505834668_6111832485215198874_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=CWVa2PJzsEwAX8xtSZo&oh=02b3445b166b527523d50d3edd84af5a&oe=5EC6D8AF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
@@ -116,7 +126,7 @@
 					</div>
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
-							<input id="moya-istoriya-xxxx" type="checkbox" />
+							<input id="moya-istoriya-xxxx-1" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81986841_115689239826478_4970631180464119761_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=ldmtKUVQZXUAX9MmgNu&oh=affdfe5051490c701ca8cdd601df8dcf&oe=5ED9D8B3" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
@@ -126,7 +136,7 @@
 					</div>
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
-							<input id="moya-istoriya-xxxx-1" type="checkbox" />
+							<input id="moya-istoriya-xxxx-2" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83443243_587623825122556_3780724092969003713_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=pSl5mmGa3mIAX9QvifW&oh=96ec942f016f245ada5bc9c24f806a93&oe=5ECEDF2B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
@@ -136,7 +146,7 @@
 					</div>
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
-							<input id="moya-istoriya-xxxx-2" type="checkbox" />
+							<input id="moya-istoriya-xxxx-3" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83117044_517051265614152_7828751543441544839_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=Q5wQPbdsBIQAX-oY1Kj&oh=0467792d6e445b429df2c3699de0fd4a&oe=5ECFC8BA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
@@ -146,7 +156,7 @@
 					</div>
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
-							<input id="moya-istoriya-xxxx-3" type="checkbox" />
+							<input id="moya-istoriya-xxxx-4" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82155166_602925233615455_5357142775244098314_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=dpAazgOKyCsAX9CPlR4&oh=d02dc1c2216f679770e83b9cd944930b&oe=5ED47EF9" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
@@ -178,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="o-fenkhele-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83654188_2654364714649659_800838728339838733_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=-Hh0GpscsIUAX9R5HTr&oh=453c9be2bdfe6ce585f2ead4dc1ed459&oe=5EBFA785" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="О ФЕНХЕЛЕ 🌱👍">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83654188_2654364714649659_800838728339838733_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=jw5lRlguETIAX8e0Krs&oh=4bdda3fa74e0090fd746fca88a368ee4&oe=5EBFA785" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="О ФЕНХЕЛЕ 🌱👍">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="rostki-lyutserny-xxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=aWO90Mo72kEAX9-k873&oh=ab93b40a232592b29be83024b7b84fee&oe=5EBA8F56" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=FCaZCUUTRpYAX8upQmE&oh=078707a9545cedc6be66e3c65d85a8a9&oe=5EBA8F56" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,16 +279,6 @@
 							<input id="krasivoe-chislo-2020" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81031252_196979424678428_6745793589002918615_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=H8eHOS_pcFcAX8GvB30&oh=a4ff6a10078c2f092d636a2ee6cd2ca0&oe=5ED6363E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Красивое число 2020.">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="dorogie-druz-yax-ya-khochu-ot-vsey-dushi-pozdravit-" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77156725_3177098188972418_8139286021232875500_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=FpBwbpkNZdEAX8cIPdG&oh=4de7be75ddb992a4aa9f351ab79a0bb4&oe=5ED1B832" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Дорогие друзья, я хочу от всей души поздравить">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
